[package]
name = "windowing"
version = "0.1.0"
edition = "2024"

[target.'cfg(target_os = "linux")'.dependencies]
bytemuck = "1.23.2"
x11rb = "0.13.2"


[target.'cfg(target_os = "windows")'.dependencies]
windows = {version = "0.62.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging"
]}
